deployed with tomcat added geogig